src/test/ui/type-alias/erroneous_const.stderr
error: any use of this value will cause an error
  --> $DIR/erroneous_const.rs:1:17
   |
LL | type Foo = [u8; 0 - 1];
   |                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/erroneous_const.rs:9:16
   |
LL | type Bar = Q<{ 0 - 1 }>;
   |              --^^^^^--
   |                |
   |                attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 2 previous errors

